# cloudcasting-app

./: .all-contributorsrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: branch_ci.yml  build-docker.yaml  docker-release.yaml  merged_ci.yml  workflows.yaml
src/cloudcasting_app/: README.md  __init__.py  app.py  data.py
src/cloudcasting_inference/: README.md  __init__.py  app.py  data.py
src/cloudcasting_metrics/: README.md  app.py
tests/: conftest.py  test_app.py  utils.py
tests/test_cloudcasting_app/: conftest.py  test_app.py
tests/test_cloudcasting_inference/: test_app.py
tests/test_cloudcasting_metrics/: conftest.py  test_app.py
