# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "cloudcasting-app"
dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
description = "An app for running the OCF cloudcasting model in production"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fsspec==2024.6.1",
    "huggingface-hub==0.28.1",
    "hydra-core==1.3.2",
    "numpy==2.1.2",
    "ocf-data-sampler==0.1.4",
    "ocf_blosc2==0.0.13",
    "pandas==2.2.3",
    "s3fs==2024.6.1",
    "safetensors==0.5.2",
    "sat_pred @ git+https://github.com/openclimatefix/sat_pred.git@main",
    "torch>1.13,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "typer==0.15.1",
    "xarray==2025.1.2",
    "zarr==2.18.3",
]

[dependency-groups]
dev = [
    # Testing
    "pytest",
    "unittest-xml-reporting",
    # Linting and type checking
    "mypy >= 1.11.0",
    "ruff >= 0.6.4",
]

[project.scripts]
# Put entrypoints in here
cloudcasting-app = "cloudcasting_app.app:main"

[project.urls]
repository = "https://github.com/openclimatefix/cloudcasting-app"

[tool.setuptools]
include-package-data = false

[tool.setuptools-git-versioning]
enabled = true

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
dmypy = true
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
plugins = [
    "numpy.typing.mypy_plugin",
]

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["ANN101", "ANN102"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

# --- DOCUMENTATION CONFIGURATION --- #

[tool.pydoctor]
add-package = ["src/cloudcasting_app"]
project-base-dir = "src/cloudcasting_app"
docformat = "google"
html-output = "docs"
theme = "classic"
privacy = [
    "HIDDEN:**.test_*",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
